Header z-index problem fixed

--- a/css/custom.css
+++ b/css/custom.css
@@ -3,7 +3,7 @@ header {
   top: 0;
   height: 90px;
   width: 100%;
-  z-index: 4;
+  z-index: 5;
   background-color: var(--color-white);
 }
 
@@ -274,7 +274,6 @@ button[data-role="add-button"] {
 }
 
 .modal-product-info {
-  flex-shrink: 0;
   width: 100%;
   padding: 24px;
   position: relative;
